--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "vue-template-compiler": "^2.5.21",
     "web3": "^1.0.0-beta.37"
   },
